workspaces/DC Dev/DC Dev/src/objects/Merchandise__c.object
<CustomObject>
    <description>Holds information of the merchandise in the warehouse.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Holds the description of the merchandise</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchandise_Name__c</fullName>
        <description>Holds the name of the merchandise</description>
        <label>Merchandise Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Holds the unit price of the merchandise.</description>
        <label>Unit Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRC-{000}</displayFormat>
        <label>Merchandise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>